maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurNord(x,y+1)){
  ^JediEscaper:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurNord(x,y)){
  ^JediEscaper:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurOuest(x,y)){
  ^JediEscaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!aMurOuest(x+1,y)){
  ^